подправила хедер и карточки фич

--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -105,3 +105,16 @@
   line-height: 16.50px;
   word-wrap: break-word;
 }
+
+.floatingWrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+  height: 80px;
+
+  /* Чтобы GSAP-transform работал красиво */
+  will-change: transform, opacity;
+  transition: none;
+}
