--- a/src/components/layout/CandidateHomeFeatures.module.css
+++ b/src/components/layout/CandidateHomeFeatures.module.css
@@ -1,6 +1,6 @@
 .section {
     padding: 60px 60px;
-    background: #f4f4ff;
+    background: var(--lavand);
     justify-items: center;
     display: flex;
     flex-direction: column;
@@ -9,7 +9,7 @@
 .title {
     font-size: 48px;
     font-weight: 800;
-    color: #0e2b6c;
+    color: var(--cloud);
     margin-bottom: 40px;
     text-align: center;
 }
@@ -39,70 +39,15 @@
 
     position: relative;
     will-change: transform;
-    /*transition:
-            transform 0.35s ease,
-            opacity 0.35s ease,
-            box-shadow 0.35s ease;
-
-    transform-origin: center;*/
 }
 
-/*.grid:hover .card {
-    opacity: 0.7;
-    transform: scale(0.92);
-}*/
-
-/* Наведённая карточка — растёт по ширине и высоте */
-/*.card:hover {
-    opacity: 1;
-    transform: scale(1.14) !important;
-    z-index: 3;
-    box-shadow: 0 15px 40px rgba(0,0,0,0.15);
-}*/
-
-
-/*.grid {
-    max-width: 70%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 40px;
-    transition: 0.3s ease;
-}
-
-.grid:hover .card {
-    transform: scale(0.92);
-    opacity: 0.7;
-}*/
-
-/*.card {
-    background: white;
-    padding: 32px;
-    border-radius: 20px;
-    cursor: pointer;
-    border: 4px solid transparent;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    transform-origin: center;
-}
-
-.card:hover {
-    transform: scale(1.05) !important;
-    opacity: 1;
-    z-index: 2;
-    box-shadow: 0 12px 40px rgba(0,0,0,0.1);
-
-}*/
 
 .pink {
-    border-color: #eab4c2;
+    border-color: var(--maroon);
 }
 
 .blue {
-    border-color: #9ac6ff;
+    border-color: var(--navy);
 }
 
 .cardTitle {
