--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -33,7 +33,7 @@
 }
 
 .buttonText {
-  color: var(--color-text-light);
+  /*color: var(--color-text-light);*/
   font-size: var(--font-size-lg);
   font-family: var(--font-family-mono);
   font-weight: 500;
