--- a/src/pages/ProfilePage/components/ProgressContent/ProgressContent.module.css
+++ b/src/pages/ProfilePage/components/ProgressContent/ProgressContent.module.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   gap: 25px;
+  margin-bottom: 40px;
 }
 
 /* ============================================
