правки по объединению компонентов

--- a/src/components/layout/FaqSection.module.css
+++ b/src/components/layout/FaqSection.module.css
@@ -10,8 +10,7 @@
 .faqSection {
     width: 100%;
     max-width: 860px;
-    margin: 10px auto;
-    margin-bottom: 60px;
+    margin: 10px auto 60px;
     padding: 20px;
 
     background: #ffffff;
