--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -1,12 +1,10 @@
 @import './styles/variables.css';
 
 .page {
-  padding-top: 67px;
-  padding-left: 90px;
-  padding-right: 90px;
-  padding-bottom: 60px;
+  padding: 0 90px 60px;
   background: var(--color-background);
   min-height: 100vh;
+  margin-top: 80px;
 }
 
 .title {
